feat: implement Phase 1 launch readiness - critical fixes
1. Video Processing Pipeline Activation
   - Add publishVideoProcessingEvent() to SqsPublisher
   - Call it from VideoService.markUploadComplete()
   - Videos now trigger SQS processing after upload

2. Attention Check Validation Fix
   - Add correctAnswer field to TaskQuestion DTO
   - Validate actual answer vs expected (default "Blue")
   - Fail safely on errors instead of auto-passing

3. Qualification Test Logic
   - Create QualificationConfig with configurable settings
   - Validate answers against expected (80% threshold)
   - Reject submissions under 60s (anti-cheating)

4. CORS & Production Config
   - Externalize CORS origins to app.cors.allowed-origins
   - Create application-prod.yml with secure defaults
   - Disable Swagger, enable secure cookies in prod

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>